--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -3297,6 +3297,10 @@
 				border-radius: 10rem;
 				border: 1px solid $primary;
 				padding: .5rem .75rem;
+				&.self {
+					background-color: $primary;
+					color: #fff;
+				}
 			}
 		}
 		.entry-title {
