--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_alerts.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_alerts.scss
@@ -37,6 +37,10 @@
 	transform: translateY(2rem);
 	padding: 1rem map-get($container-padding-x, xs);
 	text-align: center;
+	min-height: 25vh;
+	display: flex;
+	align-items: center;
+	visibility: hidden;
 	@include media-breakpoint-up(sm) { padding: 1rem map-get($container-padding-x, sm); }
 	@include media-breakpoint-up(md) { padding: 1rem map-get($container-padding-x, md); }
 	@include media-breakpoint-up(lg) { padding: 1rem map-get($container-padding-x, lg); }
@@ -51,6 +55,7 @@
 		transform: none;
 	}
 	> .inner {
+		width: 100%;
 		@include media-breakpoint-up(md) {
 			display: flex;
 			align-items: center;
