--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -26491,16 +26491,21 @@ nav.pagination {
         -webkit-box-flex: 1;
             -ms-flex: 1 1 auto;
                 flex: 1 1 auto;
-        padding: 0 1rem; }
+        padding: 0 1rem;
+        border-left: 2px solid transparent; }
+        #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus .sub-menu-container:first-child {
+          border-left: none; }
+          #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus .sub-menu-container:first-child .menu:before {
+            display: none; }
       #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus h4 {
         font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-        font-weight: 500;
+        font-weight: 600;
         text-transform: capitalize;
         letter-spacing: .0165em;
         margin-bottom: 0.95rem;
         margin-top: 0.3rem;
-        font-size: 1.018rem;
-        color: #032040; }
+        font-size: 1.32rem;
+        color: rgba(3, 32, 64, 0.5); }
         #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus h4 a {
           padding: 0;
           color: inherit; }
@@ -26511,7 +26516,16 @@ nav.pagination {
         margin: 0;
         display: block;
         font-weight: 400;
-        font-size: 1rem; }
+        font-size: 1rem;
+        position: relative; }
+        #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus .menu:before {
+          content: '';
+          display: block;
+          position: absolute;
+          left: calc(-1rem - 2px);
+          top: 0;
+          height: 100%;
+          border-left: 2px dotted #E9EFF3; }
         @media (min-width: 992px) {
           #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus .menu {
             font-size: 1.25rem; } }
